--- a/style.css
+++ b/style.css
@@ -337,6 +337,7 @@ input[type=range]::-webkit-slider-thumb {
     margin-top: 1rem;
     font-size: 0.875rem;
     color: var(--text-muted);
+    text-align: center;
 }
 
 /* Upload Area */
